--- a/MuscleMate/docs/Other-Evaluable-Docs/problems.mdx
+++ b/MuscleMate/docs/Other-Evaluable-Docs/problems.mdx
@@ -73,4 +73,4 @@ No aplica
 
 | Problema                                                                                                                                                                                  | Solución                                                                                                                                             | ¿Cómo medimos la solucion?                                                                           | Medida de la Solución | ¿Seguimos con esa solución? |
 | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------- | ----------------------- |--------------------------|
-| Falta de interes para la realizacion de tareas de documentacion                                                                                                                           | Anuncio por parte del coordinador del proyecto para el aviso de la realización de las tareas de documentación                                        | Medimos la solución mediante la calidad de la documentación proporcionada                            | Mejorable               | Si, seguiremos 
+| Falta de interes para la realizacion de tareas de documentacion                                                                                                                           | Anuncio por parte del coordinador del proyecto para el aviso de la realización de las tareas de documentación                                        | Medimos la solución mediante la calidad de la documentación proporcionada                            | Mejorable               | Si, seguiremos con dicha medida pero habrá que realizar algunas mejoras en la misma para una mejor eficiencia |
