docs: añadido un caso de uso

--- a/MuscleMate/docs/Internal Documents/Formato.mdx
+++ b/MuscleMate/docs/Internal Documents/Formato.mdx
@@ -1,31 +1,36 @@
-#
+# Formato
 
-<center><h1>Nombre del documento</h1></center>
-
+<center>
+  <h1>Nombre del documento</h1>
+</center>
 
 <center>![](/img/MuscleMateLogo.svg)</center>
 
+<center>**Grupo 3 - MuscleMate; Entregable**</center>
 
-<center>**Grupo 3 - MuscleMate**</center>
+---
 
+## Contribuidores
 
+- Apellidos, Nombre:
 
-#
-#
-#
-#
-#
-#
+  - Tipo de contribución (redactar, revisar); Entrada del clockify de la contribución
 
+Ejemplo:
 
+- González Marcos, Pedro:
 
-| Versión | Fecha       | Autor      | Descripción                            |
-|---------|-------------|------------|----------------------------------------|
-| v1.0    | 2024-01-01  | Autor A    | Creación del documento                 |
-| v1.1    | 2024-02-15  | Autor B    | Se agregaron secciones de introducción |
-| v1.2    | 2024-03-10  | Autor C    | Correcciones de ortografía             |
-| v2.0    | 2024-03-20  | Autor D    | Se añadieron ejemplos y conclusiones   |
+  - Redactar; Entrada clockify de la contribución
+  - Revisar; Entrada clockify de la contribución
 
+## Historial de versiones
+
+| Versión | Fecha      | Autor   | Descripción                            |
+| ------- | ---------- | ------- | -------------------------------------- |
+| v1.0    | 2024-01-01 | Autor A | Creación del documento                 |
+| v1.1    | 2024-02-15 | Autor B | Se agregaron secciones de introducción |
+| v1.2    | 2024-03-10 | Autor C | Correcciones de ortografía             |
+| v2.0    | 2024-03-20 | Autor D | Se añadieron ejemplos y conclusiones   |
 
 ## Primer punto del documento importante.
 
@@ -39,9 +44,8 @@ Lorem ipsum **COSAS IMPORTANTES QUE QUIERAS SEÑALAR EN EL PARRAFO ESCRITO** sit
 
 Asi se hace un link por si lo usases [GitHub Pages](https://pages.github.com/).
 
-- utiliza 
-- las listas 
+- utiliza
+- las listas
 - necesarias
-
 
 `![](/img/MuscleMateLogo.svg)` Siguiendo esta estructura pueden visualizarse imagenes en markdown.
