Actualizar el documento Pilots.Md #90

--- a/MuscleMate/docs/Pilots/pilotUsersPerformanceEvaluation.mdx
+++ b/MuscleMate/docs/Pilots/pilotUsersPerformanceEvaluation.mdx
@@ -12,6 +12,7 @@ title: Pilot Users Performance Evaluation
 | Versión | Fecha       | Autor      | Descripción                            |
 |---------|-------------|------------|----------------------------------------|
 | v1.0    | 2024-04-01  | David Dana Cabello   | Creación del documento                 |
+| v2.0    | 2024-04-03  | Ángel Muñoz Prieto | Actualización con S2           |
 
 
 
@@ -19,7 +20,7 @@ title: Pilot Users Performance Evaluation
 
 | Factor            | #S1 | #S2 | #S3 | #PPL | #WPL |
 |-------------------|-----|-----|-----|------|------|
-| Punctuality       | 10  |     |     |      |      |
-| Feedback validity | 8   |     |     |      |      |
-| Feedback amount   | 8   |     |     |      |      |
-| Communication     | 10  |     |     |      |      |
+| Punctuality       | 10  |  10 |     |      |      |
+| Feedback validity | 8   |  10 |     |      |      |
+| Feedback amount   | 8   |  10 |     |      |      |
+| Communication     | 10  |   7 |     |      |      |
