--- a/MuscleMate/docs/Other-Evaluable-Docs/problems.mdx
+++ b/MuscleMate/docs/Other-Evaluable-Docs/problems.mdx
@@ -83,4 +83,5 @@ No aplica
 
 | Problema                                                                                                                                                                                  | Solución                                                                                                                                             | ¿Cómo medimos la solucion?                                                                           | Medida de la Solución | ¿Seguimos con esa solución? |
 | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------- | ----------------------- |--------------------------|
+| Falta de interes para la realizacion de tareas de documentacion                                                                                                                           | Parte del equipo se encarga únicamente de documentar                                                                                                 | Medimos la solución mediante la calidad de la documentación proporcionada                            | Completa               | Si, seguiremos con dicha medida|
 | Falta de pruebas las cuales dan lugar a la creación de Bugs                                                                                                                               | Asignación instántanea de tareas de Testing                                                                                                          | Obeservamos el número de bugs a lo largo del sprint                                                  | -              | -            |
