docs: test aceptacion propietario

--- a/MuscleMate/docs/Other-Evaluable-Docs/testing-plan/acceptance-tests/tickets.mdx
+++ b/MuscleMate/docs/Other-Evaluable-Docs/testing-plan/acceptance-tests/tickets.mdx
@@ -1,10 +1,14 @@
+---
+title: Tickets
+---
+
 <center>
-  <h1>Nombre del documento</h1>
+  <h1>Tickets</h1>
 </center>
 
 <center>![](/img/MuscleMateLogo.svg)</center>
 
-<center>**Grupo 3 - MuscleMate; Entregable**</center>
+<center>**Grupo 3 - MuscleMate; Sprint 3**</center>
 
 ---
 
@@ -17,24 +21,16 @@
 
 | Versión | Fecha      | Autor                  | Descripción            |
 | ------- | ---------- | ---------------------- | ---------------------- |
-| v1.0    | 2024-04-03 | González Marcos, Pedro | Creación del documento |
+| v1.0    | 2024-04-05 | González Marcos, Pedro | Creación del documento |
 
-## Contenido
+## Requisitos previos
 
-Usuarios de prueba:
+Nuestros usuarios pilotos son españoles por lo que toda la interfaz tiene que
+estar en español.
 
-- Propietario de gimnasio
-  - Nombre de usuario:
-  - Contraseña:
-- Cliente de gimnasio:
-  - Nombre de usuario:
-  - Contraseña:
+### Tickets (Incidencias de maquinas)
 
-### Pruebas de aceptación
-
-#### Tickets de los clientes
-
-#### Crear ticket
+### Crear ticket
 
 Dado un cliente de gimnasio logueado en la plataforma
 
@@ -75,7 +71,7 @@ bandeja de entrada todavía sin resolver.
 Una vez que el propietario haya resuelto la incidencia del usuario la incidencia debería
 desaparecer.
 
-#### Crear ticket desde una máquina
+### Crear ticket desde una máquina
 
 Dado que un usuario quiere colgar una incidencia en la plataforma, también debería
 añadir un ticket desde la página para visualizar las máquinas del gimnasio.
