--- a/MuscleMate/docs/Other-Evaluable-Docs/problems.mdx
+++ b/MuscleMate/docs/Other-Evaluable-Docs/problems.mdx
@@ -84,4 +84,12 @@ No aplica
 | Problema                                                                                                                                                                                  | Solución                                                                                                                                             | ¿Cómo medimos la solucion?                                                                           | Medida de la Solución | ¿Seguimos con esa solución? |
 | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------- | ----------------------- |--------------------------|
 | Falta de interes para la realizacion de tareas de documentacion                                                                                                                           | Parte del equipo se encarga únicamente de documentar                                                                                                 | Medimos la solución mediante la calidad de la documentación proporcionada                            | Completa               | Si, seguiremos con dicha medida|
-| Falta de pruebas las cuales dan lugar a la creación de Bugs                                                                                                                               | Asignación instántanea de tareas de Testing                                                                                                          | Obeservamos el número de bugs a lo largo del sprint                                                  | -              | -            |
+| Falta de pruebas las cuales dan lugar a la creación de Bugs                                                                                                                               | Asignación instántanea de tareas de Testing                                                                                                          | Observamos el número de bugs a lo largo del sprint                                                  | -              | -            |
+
+
+### Semana 10 (10/04/2024 - 23/04/2024)
+
+| Problema                                                                                                                                                                                  | Solución                                                                                                                                             | ¿Cómo medimos la solucion?                                                                           | Medida de la Solución | ¿Seguimos con esa solución? |
+| ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------- | ----------------------- |--------------------------|
+| Falta de interes para la realizacion de tareas de documentacion                                                                                                                           | Parte del equipo se encarga únicamente de documentar y revisar la calidad de los mismos                                                              | Medimos la solución mediante la calidad de la documentación proporcionada                            | Completa                | Sí, hasta final del proyecto |
+| Falta de pruebas las cuales dan lugar a la creación de Bugs                                                                                                                               | Asignación instántanea de tareas de Testing                                                                                                          | Observamos el número de bugs a lo largo del sprint 3 (6 bugs)                                        | Mejorable            | Sí, seguimos con dicha medida  |
