--- a/MuscleMate/docs/Other-Evaluable-Docs/problems.mdx
+++ b/MuscleMate/docs/Other-Evaluable-Docs/problems.mdx
@@ -9,6 +9,7 @@ title: Problems, Solutions and Metrics
 | 1.0     | 2024-03-01 | Versión inicial del documento |
 | 2.0     | 2024-03-03 | Corrección del documento      |
 | 3.0     | 2024-04-01 | Corrección del documento      |
+| 3.0     | 2024-04-20 | Actualización del documento      |
 
 
 ## 1. Resumen ejecutivo
