Revision de todos los archivos versionado y posibles erratas

--- a/MuscleMate/docs/Other-Evaluable-Docs/Expected-vs-actual-situation.mdx
+++ b/MuscleMate/docs/Other-Evaluable-Docs/Expected-vs-actual-situation.mdx
@@ -1,18 +1,16 @@
-﻿<a name="_h4p87e5xm883"></a>Expected vs Actual Situation
+﻿---
+title: Expected vs Actual Situation
+---
 
-![](Aspose.Words.25b11f70-79c0-4d3c-a5a2-6a56e59ffea3.001.png)
 
-<a name="_yl2aps9u5hw"></a>MuscleMate
+## Historial de Versiones
+| Versión | Fecha      | Autor          | Descripción                  |
+| ------- | ---------- | -------------- | ---------------------------- |
+| v1.0    | 2024-03-20 | Luis García Parras | Creación del documento       |
+| v2.0    | 2024-03-31 | Luis García y Elena Tomás  | Actualización del documento |
+| v3.0    | 2024-04-4 | Luis García y Elena Tomás  | Actualización del documento |
 
-# <a name="_fq7jvl59qt56"></a>**Entregable - #S2 Grupo - 03**
 
-|   Miembros del Equipo    |                             |                         |
-| :----------------------: | :-------------------------- | :---------------------- |
-|  Pedro González Marcos   | Juan Jesús Martín Hernández | Manuel Ortega Garcia    |
-| David del Hoyo Carcaboso | Jorge Romero Limón          | Agustín Devós Bono      |
-|  David Zarandieta Ortiz  | David Dana Cabello          | Alejandro Mateo Capilla |
-|  Alejandro Sosa Corral   | Ángel Muñoz Prieto          | Luis Garcia Parras      |
-|     Elena Tomás Vela     | Juan Carlos Moreno Pérez    | Manuel Vázquez Martin   |
 
 # <a name="_86eteoxm07in"></a>I. Introducción
 
