--- a/MuscleMate/docs/Other-Evaluable-Docs/Planificaction/initial-plan.mdx
+++ b/MuscleMate/docs/Other-Evaluable-Docs/Planificaction/initial-plan.mdx
@@ -1,6 +1,7 @@
 ---
 title: Initial planification
 ---
+##  Historial de Versiones
 
 | Versión | Fecha       | Autor      | Descripción                            |
 |---------|-------------|------------|----------------------------------------|
