--- a/MuscleMate/docs/Other-Evaluable-Docs/Planificaction/sprintPlanning.mdx
+++ b/MuscleMate/docs/Other-Evaluable-Docs/Planificaction/sprintPlanning.mdx
@@ -2,12 +2,8 @@
 title: Sprint Planning
 ---
 
-#
-<center><h1>Sprint Planning</h1></center>
-<center>![](/img/MuscleMateLogo.svg)</center>
-<center>**Grupo 3 - MuscleMate**</center>
+##  Historial de Versiones
 
-#
 
 | Versión | Fecha       | Autor      | Descripción                            |
 |---------|-------------|------------|----------------------------------------|
