--- a/MuscleMate/docs/Other-Evaluable-Docs/docs-api.mdx
+++ b/MuscleMate/docs/Other-Evaluable-Docs/docs-api.mdx
@@ -1,6 +1,12 @@
 ---
 title: Documentación de la API de MuscleMate
 ---
+##  Historial de Versiones
+
+
+| Versión | Fecha      | Autor      | Descripción                 |
+| ------- | ---------- | ---------- | --------------------------- |
+| v1.0    | 2024-03-25 | Alejandro Sosa      | Creación del documento      |
 
 Este archivo va a servir como guia para el uso de la **API** de el backend de
 MuscleMate, indicando todos los endpoints accesibles así como los
