--- a/MuscleMate/docs/Other-Evaluable-Docs/lessons-learnt.mdx
+++ b/MuscleMate/docs/Other-Evaluable-Docs/lessons-learnt.mdx
@@ -4,12 +4,11 @@ title: Lessons learnt
 
 ## Historial de versiones
 
-| Versión | Fecha      | Diferencia entre versiones    |
-| ------- | ---------- | ----------------------------- |
-| 1.0     | 2024-02-22 | Versión inicial del documento |
-| 2.0     | 2024-03-01 | Actualización del documento   |
-| 3.0     | 2024-03-02 | Actualización del documento   |
-| 4.0     | 2024-04-01 | Actualización del documento   |
+| Versión | Fecha      | Autor          | Descripción                  |
+| ------- | ---------- | -------------- | ---------------------------- |
+| v1.0    | 2024-02-22 | Manuel Ortega | Creación del documento       |
+| v2.0    | 2024-03-15 | Manuel Ortega | Actualización del documento |
+| v3.0    | 2024-04-4 | Luis García y Manuel Ortega  | Actualización del documento |
 
 # Resumen ejecutivo
 
