--- a/MuscleMate/docs/Other-Evaluable-Docs/problems.mdx
+++ b/MuscleMate/docs/Other-Evaluable-Docs/problems.mdx
@@ -4,12 +4,12 @@ title: Problems, Solutions and Metrics
 
 ## Historial de versiones
 
-| Versión | Fecha      | Diferencia entre versiones    |
-| ------- | ---------- | ----------------------------- |
-| 1.0     | 2024-03-01 | Versión inicial del documento |
-| 2.0     | 2024-03-03 | Corrección del documento      |
-| 3.0     | 2024-04-01 | Corrección del documento      |
-| 3.0     | 2024-04-20 | Actualización del documento      |
+| Versión | Fecha      |Autor   | Diferencia entre versiones    |
+| ------- | ---------- |---------|----------------------------- |
+| 1.0     | 2024-03-01 |Luis García| Versión inicial del documento |
+| 2.0     | 2024-03-03 |Luis García| Corrección del documento      |
+| 3.0     | 2024-04-01 |Luis García| Corrección del documento      |
+| 4.0     | 2024-04-20 |Luis García| Actualización del documento      |
 
 
 ## 1. Resumen ejecutivo
