--- a/MuscleMate/docs/Other-Evaluable-Docs/requirements.mdx
+++ b/MuscleMate/docs/Other-Evaluable-Docs/requirements.mdx
@@ -1,28 +1,13 @@
 ﻿---
-title: Requisitos
+title: Requirements
 ---
-
-<center>
-  <h1>Requisitos</h1>
-</center>
-
-<center>[](/img/MuscleMateLogo.svg)</center>
-
-<center>**Grupo 3 - MuscleMate; Sprint 3**</center>
-
----
-
-## Contribuidores
-
-- González Marcos, Pedro:
-  - Redactar; #125 Actualizar Registro de Requisitos
 
 ## Historial de versiones
 
 | Versión | Fecha      | Autor                   | Descripción                       |
 | ------- | ---------- | ----------------------- | --------------------------------- |
 | v1.0    | 2024-02-14 | Analistas de requisitos | Creación del documento            |
-| v2.0    | 2024-04-14 | González Marcos, Pedro  | Replanificación de los requisitos |
+| v2.0    | 2024-04-14 |  Pedro González Marcos | Replanificación de los requisitos |
 
 ## Contenido
 
