--- a/MuscleMate/docs/Pilots/pilotUsersCommitmentAgreement anonymous people.mdx
+++ b/MuscleMate/docs/Pilots/pilotUsersCommitmentAgreement anonymous people.mdx
@@ -5,10 +5,12 @@ sidebar_position: 8
 ---
 
 # Pilot Users commitment Agreement group anonymous people
+##  Historial de Versiones
+
 
 | Versión | Fecha       | Autor      | Descripción                            |
 |---------|-------------|------------|----------------------------------------|
-| v1.0    | 2024-01-01  | xxxxxx| Creación del documento                 |
+| v1.0    | 2024-03-25  | Angel Muñoz Prieto| Creación del documento                 |
 
 # Acuerdo de Compromiso Mutuo para Ayudar al Grupo 3 de ISPP
 
