--- a/MuscleMate/docs/Pilots/pilotUsersCommitmentAgreement.mdx
+++ b/MuscleMate/docs/Pilots/pilotUsersCommitmentAgreement.mdx
@@ -5,10 +5,11 @@ sidebar_position: 8
 ---
 
 # Pilot Users commitment Agreement group 9
+##  Historial de Versiones
 
 | Versión | Fecha       | Autor      | Descripción                            |
 |---------|-------------|------------|----------------------------------------|
-| v1.0    | 2024-01-01  | xxxxxx| Creación del documento                 |
+| v1.0    | 2024-03-14  | Angel Muñoz Prieto| Creación del documento                 |
 
 # Acuerdo de Compromiso Mutuo entre los grupos 3 y 9 de ISPP
 
