--- a/MuscleMate/docs/Other-Evaluable-Docs/ALN/Frontend ALN.mdx
+++ b/MuscleMate/docs/Other-Evaluable-Docs/ALN/Frontend ALN.mdx
@@ -1,5 +1,7 @@
 # Frontend TP
 
+##  Historial de Versiones
+
 | Versión | Fecha      | Autor          | Descripción                  |
 | ------- | ---------- | -------------- | ---------------------------- |
 | v1.0    | 2024-03-17 | Pedro González | Creación del documento       |
