--- a/MuscleMate/docs/Pilots/pilotUsersPerformanceEvaluation.mdx
+++ b/MuscleMate/docs/Pilots/pilotUsersPerformanceEvaluation.mdx
@@ -2,13 +2,7 @@
 title: Pilot Users Performance Evaluation
 ---
 
-#
-<center><h1>Pilot Users Performance Evaluation</h1></center>
-<center>![](/img/MuscleMateLogo.svg)</center>
-<center>**Grupo 3 - MuscleMate**</center>
-
-#
-
+##  Historial de Versiones
 | Versión | Fecha       | Autor      | Descripción                            |
 |---------|-------------|------------|----------------------------------------|
 | v1.0    | 2024-04-01  | David Dana Cabello   | Creación del documento                 |
