--- a/MuscleMate/docs/Other-Evaluable-Docs/ALN/Frontend ALN.mdx
+++ b/MuscleMate/docs/Other-Evaluable-Docs/ALN/Frontend ALN.mdx
@@ -1,5 +1,7 @@
 # Frontend TP
+![MUSCLEMATE](../logo.png)
 
+## Musclemate, Grupo 3
 ##  Historial de Versiones
 
 | Versión | Fecha      | Autor          | Descripción                  |
