--- a/MuscleMate/docs/Other-Evaluable-Docs/Planificaction/initial-plan.mdx
+++ b/MuscleMate/docs/Other-Evaluable-Docs/Planificaction/initial-plan.mdx
@@ -1,6 +1,9 @@
 ---
 title: Initial planification
 ---
+![MUSCLEMATE](../logo.png)
+
+## Musclemate, Grupo 3
 ##  Historial de Versiones
 
 | Versión | Fecha       | Autor      | Descripción                            |
