--- a/MuscleMate/docs/Other-Evaluable-Docs/docs-api.mdx
+++ b/MuscleMate/docs/Other-Evaluable-Docs/docs-api.mdx
@@ -1,6 +1,9 @@
 ---
 title: Documentación de la API de MuscleMate
 ---
+![MUSCLEMATE](logo.png)
+
+## Musclemate, Grupo 3
 ##  Historial de Versiones
 
 
