--- a/MuscleMate/docs/Other-Evaluable-Docs/lessons-learnt.mdx
+++ b/MuscleMate/docs/Other-Evaluable-Docs/lessons-learnt.mdx
@@ -1,7 +1,9 @@
 ---
 title: Lessons learnt
 ---
+![MUSCLEMATE](logo.png)
 
+## Musclemate, Grupo 3
 ## Historial de versiones
 
 | Versión | Fecha      | Autor          | Descripción                  |
