--- a/MuscleMate/docs/Other-Evaluable-Docs/problems.mdx
+++ b/MuscleMate/docs/Other-Evaluable-Docs/problems.mdx
@@ -1,7 +1,9 @@
 ---
 title: Problems, Solutions and Metrics
 ---
+![MUSCLEMATE](logo.png)
 
+## Musclemate, Grupo 3
 ## Historial de versiones
 
 | Versión | Fecha      |Autor   | Diferencia entre versiones    |
