--- a/MuscleMate/docs/Other-Evaluable-Docs/requirements.mdx
+++ b/MuscleMate/docs/Other-Evaluable-Docs/requirements.mdx
@@ -1,7 +1,9 @@
 ﻿---
 title: Requirements
 ---
+![MUSCLEMATE](logo.png)
 
+## Musclemate, Grupo 3
 ## Historial de versiones
 
 | Versión | Fecha      | Autor                   | Descripción                       |
