--- a/MuscleMate/docs/Other-Evaluable-Docs/testing-plan/acceptance-tests/tickets.mdx
+++ b/MuscleMate/docs/Other-Evaluable-Docs/testing-plan/acceptance-tests/tickets.mdx
@@ -3,7 +3,9 @@ title: Tickets
 ---
 
 
+![MUSCLEMATE](../../logo.png)
 
+## Musclemate, Grupo 3
 ## Historial de versiones
 
 | Versión | Fecha      | Autor                  | Descripción            |
