--- a/MuscleMate/docs/Pilots/pilotUsersCommitmentAgreement anonymous people.mdx
+++ b/MuscleMate/docs/Pilots/pilotUsersCommitmentAgreement anonymous people.mdx
@@ -5,6 +5,9 @@ sidebar_position: 8
 ---
 
 # Pilot Users commitment Agreement group anonymous people
+![MUSCLEMATE](logo.png)
+
+## Musclemate, Grupo 3
 ##  Historial de Versiones
 
 
