--- a/MuscleMate/docs/Pilots/pilotUsersCommitmentAgreement.mdx
+++ b/MuscleMate/docs/Pilots/pilotUsersCommitmentAgreement.mdx
@@ -5,6 +5,9 @@ sidebar_position: 8
 ---
 
 # Pilot Users commitment Agreement group 9
+![MUSCLEMATE](logo.png)
+
+## Musclemate, Grupo 3
 ##  Historial de Versiones
 
 | Versión | Fecha       | Autor      | Descripción                            |
