--- a/MuscleMate/docs/Other-Evaluable-Docs/Expected-vs-actual-situation.mdx
+++ b/MuscleMate/docs/Other-Evaluable-Docs/Expected-vs-actual-situation.mdx
@@ -1,7 +1,9 @@
 ﻿---
 title: Expected vs Actual Situation
 ---
+![MUSCLEMATE](logo.png)
 
+## Musclemate, Grupo 3
 
 ## Historial de Versiones
 | Versión | Fecha      | Autor          | Descripción                  |
