--- a/MuscleMate/docs/Pilots/pilotUsersPerformanceEvaluation.mdx
+++ b/MuscleMate/docs/Pilots/pilotUsersPerformanceEvaluation.mdx
@@ -1,7 +1,9 @@
 ---
 title: Pilot Users Performance Evaluation
 ---
+![MUSCLEMATE](logo.png)
 
+## Musclemate, Grupo 3
 ##  Historial de Versiones
 | Versión | Fecha       | Autor      | Descripción                            |
 |---------|-------------|------------|----------------------------------------|
